@@ -305,7 +305,7 @@ public class LambkitAnsiSqlDialect extends AnsiSqlDialect implements LambkitDial
     private String getOrderby(String table, String orderby) {
     	StringBuilder sqlBuilder = new StringBuilder();
     	sqlBuilder.append(table).append(".");
-    	orderby = orderby.replaceAll(",", table+".");
+    	orderby = orderby.replaceAll(",", ","+table+".");
     	sqlBuilder.append(orderby);
     	return sqlBuilder.toString();
     }
