@@ -311,7 +311,7 @@ public class LambkitMysqlDialect extends MysqlDialect implements LambkitDialect,
     private String getOrderby(String table, String orderby) {
     	StringBuilder sqlBuilder = new StringBuilder();
     	sqlBuilder.append("`").append(table).append("`.");
-    	orderby = orderby.replaceAll(",", "`"+table+"`.");
+    	orderby = orderby.replaceAll(",", ",`"+table+"`.");
     	sqlBuilder.append(orderby);
     	return sqlBuilder.toString();
     }
