@@ -328,7 +328,7 @@ public class LambkitPostgreSqlDialect extends PostgreSqlDialect implements Lambk
     private String getOrderby(String table, String orderby) {
     	StringBuilder sqlBuilder = new StringBuilder();
     	sqlBuilder.append("\"").append(table).append("\".");
-    	orderby = orderby.replaceAll(",", "\""+table+"\".");
+    	orderby = orderby.replaceAll(",", ",\""+table+"\".");
     	sqlBuilder.append(orderby);
     	return sqlBuilder.toString();
     }
