@@ -6,6 +6,8 @@ lambkit-1.0.3:
 优化：优化数据库密码加密解密，用户可自定义算法。用户可采用继承LambkitPasswordCracker进行加密解密，默认解密方式时，当密码小于24位时使用明码。
 优化：优化AuthService登录接口
 优化：LambkitApplication可通过args配置，取消shiro的支持。
+优化：修改ATTR_TEMPLATE_PATH变量为TPATH
+修复：修复order by查询中Dialect处理错误
 
 -----------------------------
 lambkit-1.0.2:
